Bug 1883285 - ensure non-scaling-stroke animates when scaling starts from 0 r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D212352